--- a/lesson5/05_13功課.ipynb
+++ b/lesson5/05_13功課.ipynb
@@ -160,11 +160,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "輸入身高(公分): 170 cm\n",
-      "輸入體重(公斤): 90 Kg\n",
+      "輸入身高(公分): 190 cm\n",
+      "輸入體重(公斤): 60 Kg\n",
       "==============================\n",
       "BMI數值計算完成\n",
       "\n",
+      "BMI :  16.62\n",
+      "BMI < 18.5 , 體重過輕\n",
+      "****************************************\n",
+      "\n",
+      "輸入身高(公分): 152 cm\n",
+      "輸入體重(公斤): 45 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "BMI計算數值=19.48, BMI 狀態:體重過重\n",
+      "****************************************\n",
+      "\n",
+      "輸入身高(公分): 170 cm\n",
+      "輸入體重(公斤): 70 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "BMI計算數值=24.22, BMI 狀態:輕度肥胖\n",
+      "****************************************\n",
+      "\n",
+      "輸入身高(公分): 160 cm\n",
+      "輸入體重(公斤): 70 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "BMI計算數值=27.34, BMI 狀態:中度肥胖\n",
+      "****************************************\n",
+      "\n",
+      "輸入身高(公分): 160 cm\n",
+      "輸入體重(公斤): 80 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "****************************************\n",
+      "\n",
+      "輸入身高(公分): 160 cm\n",
+      "輸入體重(公斤): 100 Kg\n",
+      "==============================\n",
+      "BMI數值計算完成\n",
+      "\n",
+      "BMI計算數值=39.06, BMI 狀態:過度肥胖\n",
       "****************************************\n",
       "\n",
       "應用程式結束~~~\n"
@@ -233,8 +274,8 @@
     "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:輕度肥胖\")\n",
     "\n",
     "        elif bmi <= 30 and bmi < 35 :\n",
-    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:中度肥胖\") #有錯誤不執行\n",
-    "            \n",
+    "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:中度肥胖\") #有錯誤不會輸出\n",
+    "\n",
     "        elif bmi >=35 :\n",
     "                print (f\"BMI計算數值={bmi:.2f}, BMI 狀態:過度肥胖\")\n",
     "\n",
