--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# 自訂function\n",
     "def menu(wine, entree, dessert):\n",
     "    print(f\"前酒:{wine}\")\n",
     "    print(f\"主餐:{entree}\")\n",
@@ -74,6 +74,38 @@
     "# 可以不依照參數的順序\n",
     "\n",
     "menu(wine='白酒',entree='牛排',dessert='蛋糕')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b85aba71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "前酒:紅酒\n",
+      "主餐:牛排\n",
+      "甜點:奶昔\n",
+      "前酒:紅酒\n",
+      "主餐:牛排\n",
+      "甜點:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def menu(wine, entree, dessert='奶昔'): #預設值一定要在最後面\n",
+    "    print(f\"前酒:{wine}\")\n",
+    "    print(f\"主餐:{entree}\")\n",
+    "    print(f'甜點:{dessert}')\n",
+    "\n",
+    "menu('紅酒','牛排') #引數值呼叫\n",
+    "\n",
+    "menu('紅酒','牛排',dessert='蛋糕')"
    ]
   }
  ],
