--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -107,6 +107,64 @@
     "\n",
     "menu('紅酒','牛排',dessert='蛋糕')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab3aab61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'b', 'c', 1, 2, 3, True, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# *參數名稱\n",
+    "# 1個*是引數值呼叫\n",
+    "\n",
+    "#沒有限定數量的引數值的呼叫,也可以0個引數值\n",
+    "#大部份有前面\n",
+    "#參數名稱可以任意名稱\n",
+    "\n",
+    "def print_args(*args):\n",
+    "    #args is tuple\n",
+    "    #tuple是把一組數值包在一起,使用小括號()\n",
+    "    print (args)\n",
+    "\n",
+    "print_args('a', 'b', 'c', 1, 2, 3,True,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53ee43b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# **參數名稱\n",
+    "# 2個**是引數名稱呼叫\n",
+    "#大部份放在最後面\n",
+    "#沒有限定數量的引數名稱呼叫,沒有限定數量代表可以0個\n",
+    "#參數名稱可以任意名稱\n",
+    "\n",
+    "def print_kwargs(**kwargs):\n",
+    "    #kwargs is dictionary\n",
+    "    print(kwargs)\n",
+    "\n",
+    "print_kwargs(one=1,two=2,three=3,four=4,five=5)\n"
+   ]
   }
  ],
  "metadata": {
