--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -165,6 +165,35 @@
     "\n",
     "print_kwargs(one=1,two=2,three=3,four=4,five=5)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c75f0e5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'b', 1, 2, True, False)\n",
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 混合*args **kwargs\n",
+    "\n",
+    "def print_mixed(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)\n",
+    "\n",
+    "print_mixed('a', 'b', 1, 2, True, False,\n",
+    "            one=1,\n",
+    "            two=2,\n",
+    "            three=3,\n",
+    "            four=4) #有逗號可以換行增加可閱讀性"
+   ]
   }
  ],
  "metadata": {
