--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -76,8 +76,93 @@
    "execution_count": null,
    "id": "a328b4f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Taiwan'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "dict\n",
+    "mutable(可變的變數)\n",
+    "Mapping(mapping資料)\n",
+    "iterable(可重覆讀取)\n",
+    "用大括號符號{key:value}來建立\n",
+    "typehint(dict)\n",
+    "\"\"\"\n",
+    "\n",
+    "codes = {\"tw\":\"Taiwan\", \"jp\":\"Japan\", \"hk\":\"Hong Kong\"}#key:value\n",
+    "codes #取出key:value\n",
+    "\n",
+    "codes['tw']#取出value\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b1674a51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tw\n",
+      "Taiwan\n",
+      "======\n",
+      "jp\n",
+      "Japan\n",
+      "======\n",
+      "hk\n",
+      "Hong Kong\n",
+      "======\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in codes:\n",
+    "    print(key)#取出key取出key\n",
+    "    print(codes[key])#取出value\n",
+    "\n",
+    "    print(\"======\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "51ef2750",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'台中', '台北', '高雄'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "set\n",
+    "元素不可以重覆\n",
+    "符號建立方式大括號{}\n",
+    "\"\"\"\n",
+    "\n",
+    "#set\n",
+    "citys = {'台北','台中','高雄','台北','台中','高雄'}\n",
+    "citys"
+   ]
   }
  ],
  "metadata": {
