--- a/lesson7/lesson7_3.ipynb
+++ b/lesson7/lesson7_3.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e029c8e2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'星期日'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "星期一\n",
+      "星期二\n",
+      "星期三\n",
+      "星期四\n",
+      "星期五\n",
+      "星期六\n",
+      "星期日\n"
+     ]
     }
    ],
    "source": [
@@ -31,7 +34,44 @@
     "#透過索引編號取得元素\n",
     "weekdays[0]\n",
     "weekdays[1]\n",
-    "weekdays[6]"
+    "weekdays[6]\n",
+    "\n",
+    "for day in weekdays:\n",
+    "    print(day)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "67f06c7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('robert', 35, 345)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#將tuple拆解給變數\n",
+    "(name, age, scores) = ('robert', 35, 345)\n",
+    "name\n",
+    "age\n",
+    "scores\n",
+    "\n",
+    "\n",
+    "#小括號可以省略\n",
+    "name, age, scores = 'robert', 35, 345\n",
+    "\n",
+    "#快速顯示多個變數\n",
+    "name, age, scores\n"
    ]
   }
  ],
