--- a/lesson8/lesson8_1.ipynb
+++ b/lesson8/lesson8_1.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "51ef2750",
    "metadata": {},
    "outputs": [
@@ -160,9 +160,17 @@
     "\"\"\"\n",
     "\n",
     "#set\n",
-    "citys = {'台北','台中','高雄','台北','台中','高雄'}\n",
+    "citys = {'台北','台中','高雄','台北','台中','高雄'} #重複的元素不會顯示\n",
     "citys"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51d68d91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
