--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -273,17 +273,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "86cebd98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78},\n",
+       " {'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85},\n",
+       " {'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92},\n",
+       " {'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85},\n",
+       " {'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94},\n",
+       " {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def chinese_greater_80(student):\n",
+    "def chinese_greater_80(student): #自己定義function\n",
     "    if student['Chinese'] >= 80:\n",
     "        return student\n",
+    "        #else:\n",
+    "        #    return None\n",
     "    \n",
     "\n",
     "list(filter(chinese_greater_80, students))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3096a081",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57e6ad02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chinese_greater_80(student): #自己定義function\n",
+    "    if student['Chinese'] >= 80:\n",
+    "        return student\n",
+    "        #else:\n",
+    "        #    return None\n",
+    "    \n",
+    "\n",
+    "list(filter(chinese_greater_80, students))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c54f126f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Python 的 lambda 函數是一種匿名函數（沒有名稱的函數），用來寫簡短且單行的函數。它的語法格式如下：\n",
+    "\n",
+    "lambda 參數列表: 運算式\n",
+    "lambda 是關鍵字，表示定義一個匿名函數。\n",
+    "參數列表可以有多個參數，用逗號分隔。\n",
+    "運算式是函數的回傳值，且只能是一個單行表達式，不能有多行程式碼或複雜語句。\n",
+    "範例說明\n",
+    "基本用法：定義一個加法函數\n",
+    "add = lambda x, y: x + y\n",
+    "print(add(3, 4))  # 輸出 7\n",
+    "立即執行函數（IIFE）\n",
+    "print((lambda x, y: x * y)(5, 6))  # 輸出 30\n",
+    "搭配內建函數使用\n",
+    "map()：將 lambda 函數應用於可迭代物件的每個元素\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "doubled = list(map(lambda x: x * 2, numbers))\n",
+    "print(doubled)  # 輸出 [2, 4, 6, 8, 10]\n",
+    "filter()：過濾符合條件的元素\n",
+    "numbers = [5, 10, 15, 20]\n",
+    "filtered = list(filter(lambda x: x > 10, numbers))\n",
+    "print(filtered)  # 輸出 [15, 20]\n",
+    "reduce()：累積運算（需匯入 functools 模組）\n",
+    "from functools import reduce\n",
+    "numbers = [1, 2, 3, 4]\n",
+    "product = reduce(lambda x, y: x * y, numbers)\n",
+    "print(product)  # 輸出 24\n",
+    "sorted()：自訂排序依據\n",
+    "cars = [('Toyota', 30000), ('Honda', 25000), ('Ford', 27000)]\n",
+    "sorted_cars = sorted(cars, key=lambda car: car[1])\n",
+    "print(sorted_cars)  # 依價格排序\n",
+    "與一般函數的差異\n",
+    "特性\tLambda函數\t一般函數 (def)\n",
+    "是否有名稱\t無（匿名函數）\t有名稱\n",
+    "函數內容\t只能有一行運算式\t可有多行程式碼\n",
+    "回傳值\t自動回傳運算式結果\t需使用 return 指定回傳\n",
+    "適用場景\t簡短、臨時的函數\t複雜邏輯或多行程式碼\n",
+    "總結來說，lambda 函數適合用於簡短、一次性的函數，尤其是作為參數傳入其他函數（如 map、filter、sorted 等）時，使程式碼更簡潔，但不建議用於複雜邏輯，以免降低程式可讀性[1][2][3][4][7]。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0fb4bbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78},\n",
+       " {'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85},\n",
+       " {'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92},\n",
+       " {'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85},\n",
+       " {'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94},\n",
+       " {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(filter(lambda student:student if student['Chinese'] >= 80 else None, students))"
    ]
   }
  ],
