--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8d12ca6a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "list_comprehension(快速建立list)\n",
@@ -36,21 +19,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4c082283",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "[i*2 for i in range(1, 11)]"
@@ -58,21 +30,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "05d026c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 6, 10, 14, 18]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# - [ expression for item in iterable if 條件式]\n",
     "# \n",
@@ -82,23 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a0cba80f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'姓名': '張xx', 'age': 35, 'score': 256},\n",
-       " {'姓名': '王xx', 'age': 45, 'score': 278},\n",
-       " {'姓名': '李xx', 'age': 37, 'score': 291}]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#list 是多筆相關資料\n",
     "#dictionary 是一筆相關資料\n",
@@ -113,20 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d43abffb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'姓名': '張xx', 'age': 35, 'score': 256}\n",
-      "{'姓名': '王xx', 'age': 45, 'score': 278}\n",
-      "{'姓名': '李xx', 'age': 37, 'score': 291}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for student in students: #把students 資料表格放入student變數\n",
@@ -135,30 +73,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f71f0964",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78},\n",
-       " {'name': 'Bob', 'Chinese': 75, 'English': 88, 'Math': 90},\n",
-       " {'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85},\n",
-       " {'name': 'David', 'Chinese': 60, 'English': 70, 'Math': 80},\n",
-       " {'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92},\n",
-       " {'name': 'Frank', 'Chinese': 70, 'English': 75, 'Math': 68},\n",
-       " {'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85},\n",
-       " {'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94},\n",
-       " {'name': 'Ian', 'Chinese': 78, 'English': 80, 'Math': 72},\n",
-       " {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "students = [\n",
@@ -180,41 +98,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "19018452",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78}, {'name': 'Bob', 'Chinese': 75, 'English': 88, 'Math': 90}, {'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85}, {'name': 'David', 'Chinese': 60, 'English': 70, 'Math': 80}, {'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92}, {'name': 'Frank', 'Chinese': 70, 'English': 75, 'Math': 68}, {'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85}, {'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94}, {'name': 'Ian', 'Chinese': 78, 'English': 80, 'Math': 72}, {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(students)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "18256f9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78}\n",
-      "{'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85}\n",
-      "{'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92}\n",
-      "{'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85}\n",
-      "{'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94}\n",
-      "{'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for student in students:\n",
     "    if student['Chinese'] >= 80:\n",
@@ -273,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "86cebd98",
    "metadata": {},
    "outputs": [
@@ -288,7 +185,7 @@
        " {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,8 +194,8 @@
     "def chinese_greater_80(student): #自己定義function\n",
     "    if student['Chinese'] >= 80:\n",
     "        return student\n",
-    "        #else:\n",
-    "        #    return None\n",
+    "    else: #else 可以不使用\n",
+    "        return None\n",
     "    \n",
     "\n",
     "list(filter(chinese_greater_80, students))"
@@ -374,26 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0fb4bbf9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Alice', 'Chinese': 85, 'English': 92, 'Math': 78},\n",
-       " {'name': 'Charlie', 'Chinese': 90, 'English': 85, 'Math': 85},\n",
-       " {'name': 'Eva', 'Chinese': 95, 'English': 98, 'Math': 92},\n",
-       " {'name': 'Grace', 'Chinese': 88, 'English': 82, 'Math': 85},\n",
-       " {'name': 'Helen', 'Chinese': 92, 'English': 90, 'Math': 94},\n",
-       " {'name': 'Jane', 'Chinese': 85, 'English': 87, 'Math': 89}]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list(filter(lambda student:student if student['Chinese'] >= 80 else None, students))"
    ]
