--- a/2025_05_23自己練習.ipynb
+++ b/2025_05_23自己練習.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "a81541d6",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "c8fa5229",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "f8e2ead1",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "aab715f4",
    "metadata": {},
    "outputs": [
@@ -162,6 +162,61 @@
     "\n",
     "print(\"-\"*30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "06f481dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "hello\n",
+      "******************************\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for loop\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    if i==5:\n",
+    "        break\n",
+    "    print(i)\n",
+    "print(\"hello\")\n",
+    "\n",
+    "print(\"*\"*30)\n",
+    "\n",
+    "for i in range(1,11):\n",
+    "    if i==5: #5被跳過\n",
+    "        continue\n",
+    "    print(i)\n",
+    "print(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65e89cf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
