--- a/lesson9/lesson9_1.ipynb
+++ b/lesson9/lesson9_1.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3cf0e2b3",
+   "execution_count": 1,
+   "id": "ad30741e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,29 @@
     "\n",
     "@dataclass\n",
     "class Student:\n",
-    "    name:str\n",
+    "    name:str #屬性名稱 後面要有type hint ex.str ex.int\n",
     "    chinese:int\n",
     "    english:int\n",
-    "    math:int"
+    "    math:int\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "338372fd",
+   "id": "c9a9ec7c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Student'>\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "list"
+       "('robert', 89, 78, 92)"
       ]
      },
      "execution_count": 2,
@@ -36,44 +43,49 @@
    ],
    "source": [
     "#透過class Student建立實體\n",
-    "students:list[Student] = [Student(name=\"robert\",chinese=98, english=76, math=89),\n",
-    " Student(name=\"jenny\",chinese=89,english=78,math=65)]\n",
     "\n",
-    "type(students)"
+    "stu1 = Student(name='robert',chinese=89, english=78, math=92)\n",
+    "print(type(stu1))\n",
+    "stu1.name, stu1.chinese, stu1.english, stu1.math"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "907641e9",
+   "id": "856b8d55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "robert\n",
-      "98\n",
-      "89\n",
-      "76\n",
-      "==================\n",
-      "jenny\n",
-      "89\n",
-      "65\n",
-      "78\n",
-      "==================\n"
+      "<class '__main__.Student'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('jenny', 76, 87, 89)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "for student in students:\n",
-    "    print(student.name)\n",
-    "    print(student.chinese)\n",
-    "    print(student.math)\n",
-    "    print(student.english)\n",
-    "    print(\"==================\")"
+    "stu2 = Student(name='jenny',chinese=76, english=87, math=89)\n",
+    "print(type(stu2))\n",
+    "stu2.name, stu2.chinese, stu2.english, stu2.math"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb830997",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
