--- a/lesson8/lesson8_4.ipynb
+++ b/lesson8/lesson8_4.ipynb
@@ -14,7 +14,11 @@
     "    name:str\n",
     "    chinese:int\n",
     "    english:int\n",
-    "    math:int"
+    "    math:int\n",
+    "\n",
+    "    @property\n",
+    "    def total(self) ->int: #定義 property 名稱total\n",
+    "        return self.chinese + self.english + self.math \n"
    ]
   },
   {
