--- a/lesson9/lesson9_1.ipynb
+++ b/lesson9/lesson9_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "ad30741e",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,19 @@
     "    name:str #屬性名稱 後面要有type hint ex.str ex.int\n",
     "    chinese:int\n",
     "    english:int\n",
-    "    math:int\n"
+    "    math:int\n",
+    "\n",
+    "    @property\n",
+    "    def total(self) ->int: #定義 property 名稱total\n",
+    "        return self.chinese + self.english + self.math \n",
+    "\n",
+    "    def average(self) ->float: #實體方法 \n",
+    "        return round(self.total / 3.0,ndigits=2) #浮點數2個"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c9a9ec7c",
    "metadata": {},
    "outputs": [
@@ -27,18 +34,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Student'>\n"
+      "<class '__main__.Student'>\n",
+      "robert 89 78 92\n",
+      "259\n",
+      "86.33\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('robert', 89, 78, 92)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -46,12 +46,15 @@
     "\n",
     "stu1 = Student(name='robert',chinese=89, english=78, math=92)\n",
     "print(type(stu1))\n",
-    "stu1.name, stu1.chinese, stu1.english, stu1.math"
+    "print(stu1.name, stu1.chinese, stu1.english, stu1.math)\n",
+    "\n",
+    "print(stu1.total)\n",
+    "print(stu1.average()) #實體方法一定要有()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "856b8d55",
    "metadata": {},
    "outputs": [
@@ -59,24 +62,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class '__main__.Student'>\n"
+      "<class '__main__.Student'>\n",
+      "jenny 76 87 89\n",
+      "252\n",
+      "84.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('jenny', 76, 87, 89)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "stu2 = Student(name='jenny',chinese=76, english=87, math=89)\n",
     "print(type(stu2))\n",
-    "stu2.name, stu2.chinese, stu2.english, stu2.math"
+    "print(stu2.name, stu2.chinese, stu2.english, stu2.math)\n",
+    "print(stu2.total)\n",
+    "print(stu2.average()) #實體方法一定要有()"
    ]
   },
   {
