--- a/lesson9/lesson9_1.ipynb
+++ b/lesson9/lesson9_1.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ad30741e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#使用內建class\n",
+    "#內建class 名稱是dataclass\n",
+    "\n",
     "from dataclasses import dataclass\n",
     "\n",
     "@dataclass\n",
