--- a/lesson9/lesson9_4.ipynb
+++ b/lesson9/lesson9_4.ipynb
@@ -1,5 +1,147 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd1872d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#dict 包含key,value \n",
+    "#內建dict\n",
+    "\n",
+    "dict1 = {'one':1, 'two':2, 'three':3, 'four':4, 'five':5}\n",
+    "type(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4c60b9db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict1.get('one')\n",
+    "dict1.get('six')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "86b63240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n",
+      "five\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in dict1.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4d07d408",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in dict1.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "35bf10f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('one', 1)\n",
+      "('two', 2)\n",
+      "('three', 3)\n",
+      "('four', 4)\n",
+      "('five', 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in dict1.items():\n",
+    "    print(item)\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89c374e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "1\n",
+      "=======\n",
+      "two\n",
+      "2\n",
+      "=======\n",
+      "three\n",
+      "3\n",
+      "=======\n",
+      "four\n",
+      "4\n",
+      "=======\n",
+      "five\n",
+      "5\n",
+      "=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in dict1.items(): #拆解item變成key,value拆解item變成key,value\n",
+    "    print(key)\n",
+    "    print(value)\n",
+    "    print(\"=======\")"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
@@ -7,7 +149,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
