--- a/lesson9/lesson9_4.ipynb
+++ b/lesson9/lesson9_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ffd1872d",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "dict"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,18 +27,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "4c60b9db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dict1.get('one')\n",
-    "dict1.get('six')"
+    "dict1.get('one')#傳出one的value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "f71cd0ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict1.get('six') #沒有six,傳出none"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "86b63240",
    "metadata": {},
    "outputs": [
@@ -61,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "4d07d408",
    "metadata": {},
    "outputs": [
@@ -84,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "35bf10f1",
    "metadata": {},
    "outputs": [
@@ -108,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "89c374e8",
    "metadata": {},
    "outputs": [
