--- a/lesson10/lesson10_1.ipynb
+++ b/lesson10/lesson10_1.ipynb
@@ -5,17 +5,7 @@
    "execution_count": null,
    "id": "53bedf21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1.許淑婷\n",
-      "  2.周琬婷\n",
-      "  3.李進慧\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#別人的\n",
     "import random\n",
@@ -38,17 +28,7 @@
    "execution_count": null,
    "id": "2408f7e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.張俊傑\n",
-      "2.吳昕婷\n",
-      "3.林志成\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -68,7 +48,127 @@
    "id": "cc68ee3a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#建立資料結構-表格在記憶體\n",
+    "#[{}] list 包dict\n",
+    "#https://www.perplexity.ai/search/25cc8901-662e-4b9d-826d-d25eac299855\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "file = open(\"names.txt\",encoding='utf-8')\n",
+    "contents:list[str] = file.readlines()\n",
+    "file.close()\n",
+    "names:list[str] = [name.strip() for name in contents]\n",
+    "pick = int(input(\"請輸入所需要的姓名數量:\"))\n",
+    "\n",
+    "selected_names = random.sample(names, pick)\n",
+    "students_data:list[dict] = [ #list是多筆資料\n",
+    "    { #dict 是一筆相關聯資料\n",
+    "        '姓名':name,\n",
+    "        '國文':random.randint(50,100),\n",
+    "        '英文':random.randint(50,100),\n",
+    "        '數學':random.randint(50, 100) \n",
+    "    }\n",
+    "    for name in selected_names]\n",
+    "students_data #印出三行\n",
+    "\n",
+    "#print(students_data)#印出一行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51d58761",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'姓名': '鄧亭聿', '國文': 57, '英文': 66, '數學': 81},\n",
+       " {'姓名': '邱亭君', '國文': 50, '英文': 68, '數學': 68},\n",
+       " {'姓名': '陳信宏', '國文': 75, '英文': 78, '數學': 76}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# https://www.perplexity.ai/search/8a22aac5-dc37-4bbb-bb81-9edfdd6f0e53\n",
+    "\n",
+    "\n",
+    "# with ... as 不用close file\n",
+    "#更精簡的寫法\n",
+    "'''\n",
+    "with...as 是 Python 中用來管理資源的一種語法結構，主要用途是確保程式在使用完資源（如檔案、網路連線、資料庫連接等）後，\n",
+    "能自動且正確地釋放該資源，即使程式執行過程中發生錯誤也能保證資源被清理。\n",
+    "'''\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "with open(\"names.txt\",encoding='utf-8') as file:\n",
+    "    contents:list[str] = file.readlines()\n",
+    "\n",
+    "names:list[str] = [name.strip() for name in contents]\n",
+    "pick = int(input(\"請輸入所需要的姓名數量:\"))\n",
+    "\n",
+    "selected_names = random.sample(names, pick)\n",
+    "students_data:list[dict] = [\n",
+    "    {\n",
+    "        '姓名':name,\n",
+    "        '國文':random.randint(50,100),\n",
+    "        '英文':random.randint(50,100),\n",
+    "        '數學':random.randint(50, 100) \n",
+    "    }\n",
+    "    for name in selected_names]\n",
+    "students_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3a311128",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['姓名', '國文', '英文', '數學'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 指定欄位名稱（欄位順序）\n",
+    "\n",
+    "fieldnames = students_data[0].keys()\n",
+    "print(fieldnames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40b969ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 指定欄位名稱（欄位順序）\n",
+    "\n",
+    "# 指定欄位名稱（欄位順序）\n",
+    "import csv\n",
+    "\n",
+    "filednames = students_data[0].keys()\n",
+    "\n",
+    "with open('students.csv','w',newline='',encoding='utf-8') as csvfile:\n",
+    "    writer = csv.DictWriter(csvfile,fieldnames=filednames)\n",
+    "    # 寫入欄位標題\n",
+    "    writer.writeheader()\n",
+    "    \n",
+    "    # 寫入多筆資料\n",
+    "    writer.writerows(students_data)\n",
+    "print(\"寫入成功\")"
+   ]
   }
  ],
  "metadata": {
