--- a/lesson10/lesson10_1.ipynb
+++ b/lesson10/lesson10_1.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "53bedf21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.郭舜昇\n",
+      "  2.簡國瑋\n",
+      "  3.王怡君\n"
+     ]
+    }
+   ],
    "source": [
     "#別人的\n",
     "import random\n",
@@ -25,10 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2408f7e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.羅佩樺\n",
+      "2.李進慧\n",
+      "3.余宗儒\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -44,10 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cc68ee3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'姓名': '趙偉銘', '國文': 71, '英文': 61, '數學': 73},\n",
+       " {'姓名': '林詠斌', '國文': 61, '英文': 68, '數學': 59},\n",
+       " {'姓名': '周芷蓁', '國文': 92, '英文': 99, '數學': 77}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#建立資料結構-表格在記憶體\n",
     "#[{}] list 包dict\n",
@@ -77,21 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "51d58761",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'姓名': '鄧亭聿', '國文': 57, '英文': 66, '數學': 81},\n",
-       " {'姓名': '邱亭君', '國文': 50, '英文': 68, '數學': 68},\n",
-       " {'姓名': '陳信宏', '國文': 75, '英文': 78, '數學': 76}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 17\u001b[39m\n\u001b[32m     14\u001b[39m     contents:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m] = file.readlines()\n\u001b[32m     16\u001b[39m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m] = [name.strip() \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m contents]\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m pick = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m請輸入所需要的姓名數量:\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m selected_names = random.sample(names, pick)\n\u001b[32m     20\u001b[39m students_data:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mdict\u001b[39m] = [\n\u001b[32m     21\u001b[39m     {\n\u001b[32m     22\u001b[39m         \u001b[33m'\u001b[39m\u001b[33m姓名\u001b[39m\u001b[33m'\u001b[39m:name,\n\u001b[32m   (...)\u001b[39m\u001b[32m     26\u001b[39m     }\n\u001b[32m     27\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m selected_names]\n",
+      "\u001b[31mValueError\u001b[39m: invalid literal for int() with base 10: ''"
+     ]
     }
    ],
    "source": [
@@ -127,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3a311128",
    "metadata": {},
    "outputs": [
@@ -148,13 +180,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "40b969ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "寫入成功\n"
+     ]
+    }
+   ],
    "source": [
-    "# 指定欄位名稱（欄位順序）\n",
-    "\n",
     "# 指定欄位名稱（欄位順序）\n",
     "import csv\n",
     "\n",
