--- a/lesson10/lesson10_2.ipynb
+++ b/lesson10/lesson10_2.ipynb
@@ -11,120 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "07a6a67c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'姓名': '周家銘', '國文': '50', '英文': '85', '數學': '54'},\n",
-       " {'姓名': '沈心利', '國文': '54', '英文': '69', '數學': '95'},\n",
-       " {'姓名': '謝貞妃', '國文': '76', '英文': '82', '數學': '62'},\n",
-       " {'姓名': '陳建豪', '國文': '63', '英文': '77', '數學': '53'},\n",
-       " {'姓名': '余宗儒', '國文': '58', '英文': '67', '數學': '74'},\n",
-       " {'姓名': '林志喜', '國文': '62', '英文': '83', '數學': '98'},\n",
-       " {'姓名': '艾巧夫', '國文': '90', '英文': '94', '數學': '95'},\n",
-       " {'姓名': '翁均安', '國文': '83', '英文': '63', '數學': '77'},\n",
-       " {'姓名': '周怡啟', '國文': '51', '英文': '100', '數學': '94'},\n",
-       " {'姓名': '李淑芳', '國文': '83', '英文': '71', '數學': '62'},\n",
-       " {'姓名': '葉志峰', '國文': '76', '英文': '92', '數學': '84'},\n",
-       " {'姓名': '張婕妤', '國文': '97', '英文': '91', '數學': '56'},\n",
-       " {'姓名': '張伊映', '國文': '81', '英文': '90', '數學': '90'},\n",
-       " {'姓名': '杜明延', '國文': '83', '英文': '95', '數學': '96'},\n",
-       " {'姓名': '陳逸華', '國文': '77', '英文': '59', '數學': '62'},\n",
-       " {'姓名': '潘英迪', '國文': '94', '英文': '65', '數學': '61'},\n",
-       " {'姓名': '陳彥治', '國文': '93', '英文': '66', '數學': '88'},\n",
-       " {'姓名': '黃政甫', '國文': '92', '英文': '85', '數學': '65'},\n",
-       " {'姓名': '洪阿惠', '國文': '96', '英文': '95', '數學': '72'},\n",
-       " {'姓名': '鄧淑娟', '國文': '78', '英文': '53', '數學': '94'},\n",
-       " {'姓名': '黃志福', '國文': '76', '英文': '59', '數學': '66'},\n",
-       " {'姓名': '黃佩玲', '國文': '74', '英文': '56', '數學': '69'},\n",
-       " {'姓名': '陳凱翔', '國文': '50', '英文': '99', '數學': '99'},\n",
-       " {'姓名': '蘇凡菁', '國文': '79', '英文': '97', '數學': '50'},\n",
-       " {'姓名': '簡美君', '國文': '52', '英文': '96', '數學': '61'},\n",
-       " {'姓名': '陳筱涵', '國文': '83', '英文': '52', '數學': '85'},\n",
-       " {'姓名': '游倫城', '國文': '88', '英文': '78', '數學': '94'},\n",
-       " {'姓名': '王品星', '國文': '82', '英文': '80', '數學': '58'},\n",
-       " {'姓名': '白世宏', '國文': '84', '英文': '60', '數學': '85'},\n",
-       " {'姓名': '陳建香', '國文': '72', '英文': '100', '數學': '71'},\n",
-       " {'姓名': '張莉雯', '國文': '77', '英文': '81', '數學': '65'},\n",
-       " {'姓名': '賴心怡', '國文': '76', '英文': '61', '數學': '86'},\n",
-       " {'姓名': '方雅慧', '國文': '55', '英文': '62', '數學': '63'},\n",
-       " {'姓名': '景歡燦', '國文': '52', '英文': '54', '數學': '65'},\n",
-       " {'姓名': '馮淑芬', '國文': '96', '英文': '64', '數學': '94'},\n",
-       " {'姓名': '鄭奇翰', '國文': '76', '英文': '52', '數學': '98'},\n",
-       " {'姓名': '陳志偉', '國文': '82', '英文': '94', '數學': '73'},\n",
-       " {'姓名': '蔡世馨', '國文': '89', '英文': '83', '數學': '89'},\n",
-       " {'姓名': '黃柏宇', '國文': '98', '英文': '63', '數學': '60'},\n",
-       " {'姓名': '李立偉', '國文': '50', '英文': '56', '數學': '100'},\n",
-       " {'姓名': '王怡珊', '國文': '91', '英文': '95', '數學': '81'},\n",
-       " {'姓名': '朱惠儀', '國文': '50', '英文': '54', '數學': '87'},\n",
-       " {'姓名': '鄧亭聿', '國文': '52', '英文': '82', '數學': '55'},\n",
-       " {'姓名': '林建宏', '國文': '68', '英文': '82', '數學': '83'},\n",
-       " {'姓名': '賴昌韻', '國文': '85', '英文': '68', '數學': '81'},\n",
-       " {'姓名': '王志謙', '國文': '67', '英文': '71', '數學': '83'},\n",
-       " {'姓名': '馬彥文', '國文': '50', '英文': '99', '數學': '86'},\n",
-       " {'姓名': '楊易政', '國文': '80', '英文': '51', '數學': '67'},\n",
-       " {'姓名': '林建勳', '國文': '88', '英文': '51', '數學': '67'},\n",
-       " {'姓名': '王坤安', '國文': '58', '英文': '100', '數學': '79'},\n",
-       " {'姓名': '陳嘉淑', '國文': '50', '英文': '73', '數學': '72'},\n",
-       " {'姓名': '林希啟', '國文': '90', '英文': '88', '數學': '81'},\n",
-       " {'姓名': '蔡欣汝', '國文': '58', '英文': '75', '數學': '57'},\n",
-       " {'姓名': '林玉佩', '國文': '56', '英文': '52', '數學': '75'},\n",
-       " {'姓名': '張韋成', '國文': '89', '英文': '98', '數學': '70'},\n",
-       " {'姓名': '郎慧萍', '國文': '70', '英文': '86', '數學': '50'},\n",
-       " {'姓名': '游淑惠', '國文': '86', '英文': '70', '數學': '95'},\n",
-       " {'姓名': '魏秋萍', '國文': '53', '英文': '96', '數學': '91'},\n",
-       " {'姓名': '張家秀', '國文': '97', '英文': '92', '數學': '55'},\n",
-       " {'姓名': '王士銘', '國文': '96', '英文': '92', '數學': '80'},\n",
-       " {'姓名': '王德城', '國文': '74', '英文': '82', '數學': '92'},\n",
-       " {'姓名': '劉萬季', '國文': '59', '英文': '99', '數學': '67'},\n",
-       " {'姓名': '游治旺', '國文': '84', '英文': '52', '數學': '92'},\n",
-       " {'姓名': '林柏洋', '國文': '57', '英文': '56', '數學': '95'},\n",
-       " {'姓名': '陳怡珊', '國文': '88', '英文': '95', '數學': '97'},\n",
-       " {'姓名': '李蓉瑞', '國文': '69', '英文': '62', '數學': '100'},\n",
-       " {'姓名': '林淑安', '國文': '73', '英文': '93', '數學': '71'},\n",
-       " {'姓名': '林思賢', '國文': '87', '英文': '71', '數學': '72'},\n",
-       " {'姓名': '羅幸娥', '國文': '99', '英文': '97', '數學': '76'},\n",
-       " {'姓名': '藍姿婷', '國文': '73', '英文': '91', '數學': '90'},\n",
-       " {'姓名': '盧冠發', '國文': '100', '英文': '60', '數學': '57'},\n",
-       " {'姓名': '王明昇', '國文': '77', '英文': '85', '數學': '73'},\n",
-       " {'姓名': '黃健發', '國文': '61', '英文': '73', '數學': '92'},\n",
-       " {'姓名': '吳志宣', '國文': '90', '英文': '58', '數學': '50'},\n",
-       " {'姓名': '蕭淑華', '國文': '82', '英文': '96', '數學': '83'},\n",
-       " {'姓名': '謝南慧', '國文': '53', '英文': '76', '數學': '56'},\n",
-       " {'姓名': '戴萱能', '國文': '97', '英文': '98', '數學': '51'},\n",
-       " {'姓名': '周琬婷', '國文': '90', '英文': '86', '數學': '93'},\n",
-       " {'姓名': '趙偉銘', '國文': '86', '英文': '76', '數學': '77'},\n",
-       " {'姓名': '高士凱', '國文': '66', '英文': '84', '數學': '85'},\n",
-       " {'姓名': '昌嘉洋', '國文': '85', '英文': '80', '數學': '58'},\n",
-       " {'姓名': '鄭佳玲', '國文': '56', '英文': '64', '數學': '64'},\n",
-       " {'姓名': '戚亨', '國文': '50', '英文': '57', '數學': '99'},\n",
-       " {'姓名': '李政成', '國文': '54', '英文': '70', '數學': '70'},\n",
-       " {'姓名': '陳倩潔', '國文': '63', '英文': '62', '數學': '95'},\n",
-       " {'姓名': '李美洋', '國文': '88', '英文': '53', '數學': '82'},\n",
-       " {'姓名': '鄭憲定', '國文': '86', '英文': '99', '數學': '68'},\n",
-       " {'姓名': '張嘉韋', '國文': '78', '英文': '74', '數學': '77'},\n",
-       " {'姓名': '林佳人', '國文': '73', '英文': '99', '數學': '82'},\n",
-       " {'姓名': '王惠皓', '國文': '68', '英文': '64', '數學': '82'},\n",
-       " {'姓名': '李彥伸', '國文': '90', '英文': '72', '數學': '64'},\n",
-       " {'姓名': '詹忠光', '國文': '77', '英文': '82', '數學': '95'},\n",
-       " {'姓名': '蔡士賢', '國文': '56', '英文': '82', '數學': '92'},\n",
-       " {'姓名': '蔡嘉音', '國文': '58', '英文': '97', '數學': '60'},\n",
-       " {'姓名': '梁柏宇', '國文': '71', '英文': '86', '數學': '54'},\n",
-       " {'姓名': '陳樂紫', '國文': '55', '英文': '63', '數學': '57'},\n",
-       " {'姓名': '陳冠竹', '國文': '62', '英文': '56', '數學': '97'},\n",
-       " {'姓名': '陳慧君', '國文': '60', '英文': '79', '數學': '67'},\n",
-       " {'姓名': '李政白', '國文': '65', '英文': '79', '數學': '54'},\n",
-       " {'姓名': '簡國瑋', '國文': '58', '英文': '75', '數學': '88'}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -137,47 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "151b628f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'姓名': '周家銘', '國文': '50', '英文': '85', '數學': '54'},\n",
-       " {'姓名': '沈心利', '國文': '54', '英文': '69', '數學': '95'},\n",
-       " {'姓名': '余宗儒', '國文': '58', '英文': '67', '數學': '74'},\n",
-       " {'姓名': '周怡啟', '國文': '51', '英文': '100', '數學': '94'},\n",
-       " {'姓名': '陳凱翔', '國文': '50', '英文': '99', '數學': '99'},\n",
-       " {'姓名': '簡美君', '國文': '52', '英文': '96', '數學': '61'},\n",
-       " {'姓名': '方雅慧', '國文': '55', '英文': '62', '數學': '63'},\n",
-       " {'姓名': '景歡燦', '國文': '52', '英文': '54', '數學': '65'},\n",
-       " {'姓名': '李立偉', '國文': '50', '英文': '56', '數學': '100'},\n",
-       " {'姓名': '朱惠儀', '國文': '50', '英文': '54', '數學': '87'},\n",
-       " {'姓名': '鄧亭聿', '國文': '52', '英文': '82', '數學': '55'},\n",
-       " {'姓名': '馬彥文', '國文': '50', '英文': '99', '數學': '86'},\n",
-       " {'姓名': '王坤安', '國文': '58', '英文': '100', '數學': '79'},\n",
-       " {'姓名': '陳嘉淑', '國文': '50', '英文': '73', '數學': '72'},\n",
-       " {'姓名': '蔡欣汝', '國文': '58', '英文': '75', '數學': '57'},\n",
-       " {'姓名': '林玉佩', '國文': '56', '英文': '52', '數學': '75'},\n",
-       " {'姓名': '魏秋萍', '國文': '53', '英文': '96', '數學': '91'},\n",
-       " {'姓名': '劉萬季', '國文': '59', '英文': '99', '數學': '67'},\n",
-       " {'姓名': '林柏洋', '國文': '57', '英文': '56', '數學': '95'},\n",
-       " {'姓名': '謝南慧', '國文': '53', '英文': '76', '數學': '56'},\n",
-       " {'姓名': '鄭佳玲', '國文': '56', '英文': '64', '數學': '64'},\n",
-       " {'姓名': '戚亨', '國文': '50', '英文': '57', '數學': '99'},\n",
-       " {'姓名': '李政成', '國文': '54', '英文': '70', '數學': '70'},\n",
-       " {'姓名': '蔡士賢', '國文': '56', '英文': '82', '數學': '92'},\n",
-       " {'姓名': '蔡嘉音', '國文': '58', '英文': '97', '數學': '60'},\n",
-       " {'姓名': '陳樂紫', '國文': '55', '英文': '63', '數學': '57'},\n",
-       " {'姓名': '簡國瑋', '國文': '58', '英文': '75', '數學': '88'}]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -195,6 +48,25 @@
     "fail_chinese = [item for item in content if int(item['國文']) < 60]\n",
     "#fail_chinese = [item for item in content if int(item['國文']) < 60 or int(item['英文']) < 60 or int(item['數學']) < 60]\n",
     "fail_chinese\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c40187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "requests 是一個非常流行的 Python 套件，用於發送 HTTP 請求。它的設計目的是使 HTTP 請求變得簡單易用。\n",
+    "\n",
+    "在終端機安裝\n",
+    "pip install requests\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "import requests\n",
     "\n"
    ]
   }
