--- a/lesson11/lesson11_1.ipynb
+++ b/lesson11/lesson11_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a6206a8c",
    "metadata": {},
    "outputs": [
@@ -33,13 +33,28 @@
    "source": [
     "import requests\n",
     "from requests import Response #Response 是class ; class 第一個字通常是大寫\n",
+    "#是從 Python 的 requests 套件中導入 Response 類別的語法\n",
+    "'''\n",
+    "什麼是 Response？\n",
+    "Response 是 requests 模組中代表 HTTP 回應的類別。\n",
+    "\n",
+    "它封裝了伺服器回傳的資料，包括狀態碼、標頭、內容等。\n",
+    "\n",
+    "通常我們不會直接建立 Response 物件，而是透過 requests.get()、requests.post() 等方法自動取得。\n",
+    "\n",
+    "為什麼要導入 Response？\n",
+    "主要用於型別註解（type hint），方便程式碼可讀性與靜態檢查。\n",
+    "'''\n",
     "\n",
     "\n",
     "url:str = 'https://raw.githubusercontent.com/roberthsu2003/__2025_04_29_python_2_4/refs/heads/main/lesson10/students.csv'\n",
     "#設定url 的網址\n",
+    "#設定url是str設定url是str\n",
     "\n",
     "# 發送 GET 請求並取得網頁內容\n",
     "response:Response = requests.get(url)\n",
+    "\n",
+    "#response: Response 是使用 Python 3 的型別註解（type hint），表示 response 變數的類型是 requests.models.Response。\n",
     "\n",
     "response.status_code \n",
     "\n",
@@ -127,7 +142,7 @@
    ],
    "source": [
     "import io\n",
-    "from io import StringIO\n",
+    "from io import StringIO #from io import StringIO 是 Python 中用來從 io 模組導入 StringIO 類別的語句\n",
     "import csv\n",
     "\n",
     "file:StringIO = io.StringIO(content) #file是自己取的名稱 \n",
